# factcheck

./: .gitignore  AWS_INTEGRATION_GUIDE.md  DOCKER_DEPLOYMENT_GUIDE.md  Dockerfile  INFERENCE_GUIDE.md  LICENSE  README.md  SYSTEM_GUIDE.md  TESTING_README.md  audio_example.py  docker-compose.yml  example_s3_usage.py  example_usage.py  generate_test_report.py  predict_s3_deepfake.py  pyproject.toml  run_comprehensive_tests.py  run_enhanced_training.py  run_tests.py  run_training.py  sqs_deepfake_consumer.py  test-results.xml  test_data_loading.py  test_edge_cases.py  test_evaluation.py  test_execution_results.json  test_main_training.py  test_models.py  test_result_queue.py  test_sqs_message.py  test_training.py  test_training_module.py  train_and_save_models.py
analysis_results/reports/: analysis_report.html  analysis_results.json
deploy/: aws-deploy.sh
models/: detailed_evaluation_results.json  model_evaluation_results.csv
models/metadata/: audio_model_metadata.json  image_model_metadata.json  video_model_metadata.json
reports/: test_report.html  test_summary.json
src/: config.py
src/aws/: __init__.py  aws_config_template.json  example_s3_usage.py  predict_s3_deepfake.py  setup_aws_config.py  sqs_deepfake_consumer.py  test_sqs_message.py
src/core/: __init__.py  base.py  config.py  constants.py  decorators.py  exceptions.py  logging_config.py
src/inference/: common.py  predict_deepfake.py
src/models/: deepfake_detector.py  prediction_schema.py
src/services/: enhanced_prediction_service.py
src/training/: __init__.py  data_loader.py  evaluation.py  main.py  model_saver.py  train_and_save_models.py  train_deepfake_detector.py  train_enhanced_image_model.py  trainer.py  visualization.py
src/utils/: audio_pipeline.py  image_pipeline.py  optimized_image_pipeline.py  s3_utils.py  sqs_consumer.py  video_pipeline.py
src/visualization/: analyze_results.py
